ios vh fix and spacing issues

--- a/styles/scss/_about.scss
+++ b/styles/scss/_about.scss
@@ -14,7 +14,7 @@
     height: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .aboutContainer {
