--- a/styles/scss/_contact.scss
+++ b/styles/scss/_contact.scss
@@ -9,7 +9,7 @@
     width: 95%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 5.5rem auto 3.5rem auto;
 }
 
